# invariant-gfx

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  architecture.md  composite.md  effects.md  icons.md  reference_pipelines.md  status.md
examples/: color_dashboard.py  effects_showcase.py  quick_start.py  shapes_showcase.py  text_badge.py  text_drop_shadow.py  thermometer_button.py
src/invariant_gfx/: __init__.py  anchors.py  artifacts.py
src/invariant_gfx/ops/: __init__.py  blob_to_image.py  composite.py  create_solid.py  gradient_opacity.py  layout.py  pad.py  render_svg.py  render_text.py  resize.py  resolve_resource.py  transform.py  translate.py
src/invariant_gfx/recipes/: __init__.py  drop_shadow.py  inner_glow.py  inner_shadow.py  outer_glow.py  outer_stroke.py  reflection.py
src/invariant_gfx/shapes/: __init__.py  _chart.py  _svg.py  (+2 more)
tests/: __init__.py  conftest.py  test_anchors.py  test_artifacts.py  test_e2e_content_flow.py  test_e2e_layered_badge.py  test_e2e_template_reuse.py  test_examples.py  test_graph_serialization.py  test_integration.py  test_op_blob_to_image.py  test_op_brightness_contrast.py  test_op_composite.py  test_op_create_solid.py  test_op_crop_region.py  test_op_crop_to_content.py  test_op_flip.py  test_op_gradient_opacity.py  test_op_grayscale.py  test_op_layout.py  test_op_render_svg.py  test_op_render_text.py  test_op_resize.py  test_op_resolve_resource.py  test_op_rotate.py  test_op_thumbnail.py  test_op_tint.py  test_op_transform.py  test_recipe_drop_shadow.py  test_recipe_reflection.py  test_shapes.py
